--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Guider Mood to Verse</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Jomhuria&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Animate.css -->
+  <!-- Animate.css (optional for extra animations) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <style>
     :root {
@@ -15,128 +15,238 @@
       --cream: #f5f1e8;
       --font-base: 1rem;
     }
-    * { box-sizing: border-box; margin:0; padding:0; }
+    *, *::before, *::after { box-sizing: border-box; }
     body {
+      position: relative;
       font-family: 'Roboto', sans-serif;
       font-size: var(--font-base);
       background: linear-gradient(135deg, var(--dark-green), var(--darker-green));
       color: var(--cream);
-      display: flex; flex-direction: column; align-items:center; min-height:100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      overflow-x: hidden;
+    }
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0,0,0,0);
+      white-space: nowrap;
+      border: 0;
     }
     header.header {
-      width:100%; padding:1rem; text-align:center;
-      font-size:2rem; font-weight:700; letter-spacing:0.2rem;
-      background: rgba(255,255,255,0.1); backdrop-filter: blur(10px);
+      width: 100%;
+      padding: 1rem;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 700;
+      letter-spacing: 0.2rem;
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(10px);
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      margin-bottom:2rem;
+      margin-bottom: 2rem;
     }
-    .container {
-      width: 100%; max-width: 500px;
-      background: rgba(255,255,255,0.1); backdrop-filter: blur(10px);
-      border:1px solid rgba(255,255,255,0.2); border-radius:1rem;
-      padding:2rem; text-align:center; box-shadow:0 8px 32px rgba(0,0,0,0.3);
+    main.container {
+      width: 100%;
+      max-width: 500px;
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 1rem;
+      padding: 2rem;
+      text-align: center;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+      position: relative;
+      z-index: 1;
     }
-    h1 { margin-bottom:1.5rem; font-size:1.75rem; }
-    label { display:block; margin-bottom:0.5rem; font-weight:700; }
+    h1 { margin-bottom: 1.5rem; font-size: 1.75rem; }
+    label { display: block; margin-bottom: 0.5rem; font-weight: 700; }
     select {
-      width:100%; padding:0.75rem; border:none; border-radius:0.5rem;
-      font-size:1rem; margin-bottom:1rem;
-    }
-    button#playVerse, button#playVerse:hover {
-      background: none; border:none; cursor:pointer;
+      width: 100%;
+      padding: 0.75rem;
+      border: none;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      margin-bottom: 1rem;
     }
     button#getVerse {
-      background-color: var(--cream); color: var(--dark-green);
-      border:none; border-radius:0.5rem; padding:0.75rem 2rem;
-      font-size:1rem; cursor:pointer; transition: transform 0.2s;
-      margin-bottom:1.5rem;
+      background-color: var(--cream);
+      color: var(--dark-green);
+      border: none;
+      border-radius: 0.5rem;
+      padding: 0.75rem 2rem;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: transform 0.2s;
+      margin-bottom: 1.5rem;
     }
-    button#getVerse:hover { transform:scale(1.05); }
-    .verses { display:none; flex-direction:column; gap:1.5rem; }
+    button#getVerse:hover { transform: scale(1.05); }
+    .verses { display: none; flex-direction: column; gap: 1.5rem; }
     .verse-block {
-      background: rgba(255,255,255,0.05); border-radius:0.75rem;
-      padding:1rem; position: relative;
+      background: rgba(255,255,255,0.05);
+      border-radius: 0.75rem;
+      padding: 1rem;
+      position: relative;
+      outline: none;
     }
     .verse-block::before {
       content: attr(data-lang-label);
-      position:absolute; top:-0.75rem; left:1rem;
-      background: var(--cream); color: var(--dark-green);
-      padding:0.25rem 0.5rem; border-radius:0.5rem;
-      font-size:0.875rem; font-weight:700;
+      position: absolute;
+      top: -0.75rem;
+      left: 1rem;
+      background: var(--cream);
+      color: var(--dark-green);
+      padding: 0.25rem 0.5rem;
+      border-radius: 0.5rem;
+      font-size: 0.875rem;
+      font-weight: 700;
     }
     .verse-text {
-      font-size:1rem; line-height:1.5; margin-top:0.5rem;
+      font-size: 1rem;
+      line-height: 1.5;
+      margin-top: 0.5rem;
     }
     .play-btn {
-      position:absolute; top:0.75rem; right:1rem;
-      background:none; border:none; cursor:pointer; font-size:1.25rem;
+      position: absolute;
+      top: 0.75rem;
+      right: 1rem;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1.25rem;
     }
-    @media (min-width:600px) {
-      h1 { font-size:2rem; }
-      .verse-text { font-size:1.125rem; }
+    /* Emoji animation container */
+    #emojiContainer {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 0;
+    }
+    .emoji {
+      position: absolute;
+      font-size: 2rem;
+      animation: floatUp 3s ease-out forwards;
+    }
+    @keyframes floatUp {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-200px) scale(1.5); opacity: 0; }
+    }
+    @media (min-width: 600px) {
+      h1 { font-size: 2rem; }
+      .verse-text { font-size: 1.125rem; }
     }
   </style>
 </head>
 <body>
   <header class="header">GUIDER</header>
-  <div class="container" role="main">
+  <main class="container" role="main">
     <h1>Discover Your Verse</h1>
     <label for="mood">Select Your Mood:</label>
     <select id="mood" aria-label="Select your mood">
-      <option value="">--Choose Mood--</option>
+      <option value="" disabled selected hidden>Choose your mood</option>
       <option value="sad">Sad</option>
       <option value="depressed">Depressed</option>
       <option value="anxious">Anxious</option>
       <option value="angry">Angry</option>
       <option value="stressed">Stressed</option>
       <option value="hopeful">Hopeful</option>
+      <option value="happy">Happy</option>
     </select>
     <button id="getVerse">Get Verse</button>
     <div class="verses animate__animated" id="versesContainer" aria-live="polite"></div>
-  </div>
+  </main>
+  <div id="emojiContainer"></div>
   <script>
     const mappings = {
-      sad: [{ar:'إِنَّ مَعَ الْعُسْرِ يُسْرًا',ur:'بے شک ہر تنگی کے ساتھ آسانی ہے',en:'Indeed, with hardship [will be] ease.'}],
-      depressed: [{ar:'فَإِنَّ مَعَ الْعُسْرِ يُسْرًا',ur:'تو بے شک تنگی کے ساتھ آسانی ہے',en:'So verily, with the hardship, there is relief.'}],
-      anxious: [{ar:'الَّذِينَ آمَنُوا وَتَطْمَئِنُّ قُلُوبُهُم بِذِكْرِ اللَّهِ',ur:'وہ لوگ جو ایمان لائے اور جن کے دل اللہ کے ذکر سے اطمینان پذیر ہوتے ہیں',en:'Those who have believed and whose hearts are assured by the remembrance of Allah.'}],
-      angry: [{ar:'وَلَا يَحْسَبَنَّ الَّذِينَ يُسَارِعُونَ فِي الْكُفْرِ',ur:'اور جو لوگ کفر میں جلدی کرتے ہیں وہ نہ سمجھیں',en:'And do not let the hatred of a people prevent you from being just.'}],
-      stressed: [{ar:'وَهُوَ الَّذِي خَلَقَ السَّمَاوَاتِ وَالْأَرْضَ',ur:'وہی خدا ہے جس نے آسمانوں اور زمین کو پیدا کیا',en:'It is He who created the heavens and the earth.'}],
-      hopeful: [{ar:'وَمَن يَتَّقِ اللَّهَ يَجْعَل لَّهُ مَخْرَجًا',ur:'اور جو اللہ سے ڈرے گا اللہ اس کے لیے نکالنے کا راستہ نکال دے گا',en:'And whosoever fears Allah... He will make for him a way out.'}],
+      sad: [{ ar: 'إِنَّ مَعَ الْعُسْرِ يُسْرًا', ur: 'بے شک ہر تنگی کے ساتھ آسانی ہے', en: 'Indeed, with hardship [will be] ease.' }],
+      depressed: [{ ar: 'فَإِنَّ مَعَ الْعُسْرِ يُسْرًا', ur: 'تو بے شک تنگی کے ساتھ آسانی ہے', en: 'So verily, with the hardship, there is relief.' }],
+      anxious: [{ ar: 'الَّذِينَ آمَنُوا وَتَطْمَئِنُّ قُلُوبُهُم بِذِكْرِ اللَّهِ', ur: 'وہ لوگ جو ایمان لائے اور جن کے دل اللہ کے ذکر سے اطمینان پذیر ہوتے ہیں', en: 'Those who have believed and whose hearts are assured by the remembrance of Allah.' }],
+      angry: [{ ar: 'وَلَا يَحْسَبَنَّ الَّذِينَ يُسَارِعُونَ فِي الْكُفْرِ', ur: 'اور جو لوگ کفر میں جلدی کرتے ہیں وہ نہ سمجھیں', en: 'And do not let the hatred of a people prevent you from being just.' }],
+      stressed: [{ ar: 'وَهُوَ الَّذِي خَلَقَ السَّمَاوَاتِ وَالْأَرْضَ', ur: 'وہی خدا ہے جس نے آسمانوں اور زمین کو پیدا کیا', en: 'It is He who created the heavens and the earth.' }],
+      hopeful: [{ ar: 'وَمَن يَتَّقِ اللَّهَ يَجْعَل لَّهُ مَخْرَجًا', ur: 'اور جو اللہ سے ڈرے گا اللہ اس کے لیے نکالنے کا راستہ نکال دےگا', en: 'And whosoever fears Allah... He will make for him a way out.' }],
+      happy: [{ ar: 'وَمَن يَتَوَكَّلْ عَلَى اللَّهِ فَهُوَ حَسْبُهُ', ur: 'اور جو اللہ پر بھروسہ کرے، اللہ اس کے لئے کافی ہے', en: 'And whoever relies upon Allah – then He is sufficient for him.' }]
+    };
+    const moodEmojis = {
+      sad: '😢', depressed: '😞', anxious: '😟', angry: '😠', stressed: '😫', hopeful: '😊', happy: '😃'
     };
     const getVerseBtn = document.getElementById('getVerse');
     const container = document.getElementById('versesContainer');
+    const emojiContainer = document.getElementById('emojiContainer');
+
+    function clearEmojis() {
+      emojiContainer.innerHTML = '';
+    }
+
+    function generateEmojis(mood) {
+      clearEmojis();
+      const emojiChar = moodEmojis[mood] || '✨';
+      for (let i = 0; i < 10; i++) {
+        const span = document.createElement('span');
+        span.className = 'emoji';
+        span.textContent = emojiChar;
+        span.style.left = Math.random() * 100 + '%';
+        span.style.top = '80%';
+        span.style.animationDelay = (Math.random() * 0.5) + 's';
+        emojiContainer.appendChild(span);
+        // remove after animation
+        setTimeout(() => span.remove(), 3000);
+      }
+    }
+
     getVerseBtn.addEventListener('click', () => {
       const mood = document.getElementById('mood').value;
       container.innerHTML = '';
-      if(!mood || !mappings[mood]){
-        container.textContent='Please select a valid mood.';
-        container.className='verses animate__animated animate__fadeIn';
+      clearEmojis();
+
+      if (!mood || !mappings[mood]) {
+        container.textContent = 'Please select a valid mood.';
+        container.className = 'verses animate__animated animate__fadeIn';
         return;
       }
-      const obj = mappings[mood][Math.floor(Math.random()*mappings[mood].length)];
-      ['ar','ur','en'].forEach(lang=>{
+
+      generateEmojis(mood);
+
+      const obj = mappings[mood][Math.floor(Math.random() * mappings[mood].length)];
+      ['ar', 'ur', 'en'].forEach(lang => {
         const block = document.createElement('div');
-        block.className='verse-block animate__animated animate__fadeInUp';
-        block.setAttribute('data-lang-label',lang==='ar'?'Arabic':lang==='ur'?'Urdu':'English');
+        block.className = 'verse-block animate__animated animate__fadeInUp';
+        block.setAttribute('data-lang-label', lang === 'ar' ? 'Arabic' : lang === 'ur' ? 'Urdu' : 'English');
+        block.setAttribute('tabindex', '0');
+
         const btn = document.createElement('button');
-        btn.className='play-btn';
-        btn.setAttribute('aria-label','Play verse in '+lang);
-        btn.innerHTML='🔊';
-        btn.onclick=()=>{
+        btn.className = 'play-btn';
+        btn.setAttribute('aria-label', 'Play verse in ' + lang);
+        btn.innerHTML = '<span class="sr-only">Play ' + (lang === 'ar' ? 'Arabic' : lang === 'ur' ? 'Urdu' : 'English') + ' verse</span>🔊';
+        btn.onclick = () => {
           const utter = new SpeechSynthesisUtterance(obj[lang]);
-          utter.lang=lang==='ar'?'ar-SA':lang==='ur'?'ur-PK':'en-US';
+          utter.lang = lang === 'ar' ? 'ar-SA' : lang === 'ur' ? 'ur-PK' : 'en-US';
           speechSynthesis.speak(utter);
         };
+
         const text = document.createElement('div');
-        text.className='verse-text';
-        text.style.fontFamily=lang==='ar'? 'Amiri, serif': lang==='ur'? 'Jomhuria, cursive' : 'Roboto, sans-serif';
-        text.textContent=obj[lang];
+        text.className = 'verse-text';
+        text.style.fontFamily = lang === 'ar' ? 'Amiri, serif' : lang === 'ur' ? 'Jomhuria, cursive' : 'Roboto, sans-serif';
+        text.textContent = obj[lang];
+
         block.appendChild(btn);
         block.appendChild(text);
         container.appendChild(block);
       });
-      container.style.display='flex';
-      container.className='verses animate__animated animate__fadeIn';
+
+      container.style.display = 'flex';
+      container.className = 'verses animate__animated animate__fadeIn';
+      // focus first verse for screen readers
+      const first = container.querySelector('.verse-block');
+      if (first) first.focus();
     });
   </script>
 </body>
